--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,22 @@ h1 {
     text-shadow: 1px 1px 2px whitesmoke;
 }
 
-img {
-    width: 300px;
+#product {
+    margin: 0 auto;
+    padding: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.skull {
+    width: 250px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px white;
+}
+
+.hoodie {
+    width: 250px;
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px red;
 }
