--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ header {
 
 .logo {
     border-radius: 50%;
-    width: 100px;
+    width: 15%;
 }
 
 h1 {
@@ -28,12 +28,12 @@ h1 {
 .skull {
     width: 250px;
     border-radius: 10px;
-    box-shadow: 1px 1px 2px white;
+    box-shadow: 1px 1px 2px black;
 }
 
 .hoodie {
     width: 250px;
-    background-color: black;
+    background-color: white;
     border-radius: 10px;
-    box-shadow: 1px 1px 2px red;
+    box-shadow: 1px 1px 2px black;
 }
