--- a/styles/index.css
+++ b/styles/index.css
@@ -18,17 +18,13 @@ h1 {
     text-shadow: 1px 1px 2px whitesmoke;
 }
 
-#product {
+#gallery {
+    width: 85%;
     margin: 0 auto;
     padding: 25px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
-
-.skull {
-    width: 250px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 2px black;
+    justify-items: center;
 }
 
 .hoodie {
@@ -36,4 +32,24 @@ h1 {
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 1px 2px black;
+    transition: transform .5s;
+}
+
+.product {
+    width: 250px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px black;
+    transition: transform .5s;
+    cursor: pointer;
+}
+
+.hoodie:hover {
+    opacity: .6;
+    transform: scale(1.3);
+}
+
+.product:hover {
+    opacity: .8;
+    transform: scale(1.3)
 }
