--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(33, 55, 79);
     margin: 0 auto;
     text-align: center;
+    font-size: large;
 }
 
 header {
@@ -56,4 +57,24 @@ h1 {
 
 .story{
     margin: 0 auto;
+}
+
+footer{
+    padding: 25px 50px;
+    display: flex;
+    align-items: center;
+}
+
+footer p:hover {
+    color: white;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    padding-left: 25px;
+}
+
+footer a:hover {
+    color: white;
 }
