--- a/styles/socials_styles.css
+++ b/styles/socials_styles.css
@@ -13,3 +13,23 @@ header {
     border-radius: 50%;
     width: 15%;
 }
+
+footer{
+    padding: 25px 50px;
+    display: flexbox;
+    align-items: center;
+}
+
+footer p:hover {
+    color: white;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    padding-left: 25px;
+}
+
+footer a:hover {
+    color: white;
+}
