--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,12 @@ header {
     width: 15%;
 }
 
+/* invert colors, might be cool/*
+/*
+.logo:hover {
+    filter: invert(1);
+} */
+
 h1 {
     color: white;
     text-shadow: 1px 1px 2px whitesmoke;
