--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(33, 55, 79);
+    background-color: rgba(33, 55, 79, 10);
     margin: 0 auto;
     text-align: center;
     font-size: large;
